#pragma once

enum PieceColour {
    WHITE,
    BLACK
};
